--- a/de.html
+++ b/de.html
@@ -294,13 +294,13 @@ animation: odsoky 1s ease-in-out infinite  alternate;
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
 									<div class="services color-1">
 										<span class="icon2"><i class="icon-bulb"></i></span>
-										<h3>Elektronik </h3>
+										<h3>Elektronik<br><br></h3>
 									</div>
 								</div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
 									<div class="services color-2">
 										<span class="icon2"><i class="icon-globe-outline"></i></span>
-										<h3>GUI</h3>
+										<h3>GUI<br><br></h3>
 									</div>
 								</div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInTop">
@@ -312,7 +312,7 @@ animation: odsoky 1s ease-in-out infinite  alternate;
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInBottom">
 									<div class="services color-4">
 										<span class="icon2"><i class="icon-phone3"></i></span>
-										<h3>Programmierung</h3>
+										<h3>Programmierung<br><br></h3>
 									</div>
 								</div>
 							</div>
