heidary to heidari

--- a/de.html
+++ b/de.html
@@ -143,7 +143,7 @@ animation: odsoky 1s ease-in-out infinite  alternate;
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Arash Heidary | Personal Website</title>
+	<title>Arash Heidari | Personal Website</title>
 	<link rel = "icon" href ="images/favicon.ico" type = "image/x-icon"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
@@ -205,7 +205,7 @@ animation: odsoky 1s ease-in-out infinite  alternate;
 					</div>
 				</br>
 				<div class="author-img" style="background-image: url(images/about.jpg);"></div>
-				<h1 id="colorlib-logo"><a href="index.html">Arash Heidary</a></h1>
+				<h1 id="colorlib-logo"><a href="index.html">Arash Heidari</a></h1>
 				<span class="position"><a href="#" class="name-color">Elektronik- und maschinelles Lerneningenieur</a></span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
@@ -243,7 +243,7 @@ animation: odsoky 1s ease-in-out infinite  alternate;
 					   					<div class="desc">
 						   					<h1> Hi! <br>Ich bin <span class="name-color">Arash</span></h1>
 						   					
-												<p><a href="resume_ArashHeidary_de.pdf" target="_blank" class="btn btn-primary btn-learn"><span class="name-color">Lebenslauf</span> herunterladen<i class="icon-download4"></i></a></p>
+												<p><a href="resume_ArashHeidari_de.pdf" target="_blank" class="btn btn-primary btn-learn"><span class="name-color">Lebenslauf</span> herunterladen<i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
@@ -279,7 +279,7 @@ animation: odsoky 1s ease-in-out infinite  alternate;
 									<div class="about-desc">
 										<span class="heading-meta">Über mich</span>
 										<h2 class="colorlib-heading">Wer bin ich?</h2>
-										<p style="text-align: justify"><strong>Hi, ich bin Arash Heidary.</strong> Jetzt arbeite ich als Forscher am Elektronikforschungszentrum der Iranischen Universität für Wissenschaft und Technologie. Ich habe viele Erfahrungen mit eingebetteten Systemen und eingebetteter Software wie AVR-Mikrocontrollern, PIC-Mikrocontrollern, ARM usw. Ich habe auch einige Erfahrungen mit IoT und habe auch mit Raspberry PI und Arduino und den zugehörigen Modulen gearbeitet. Data Science ist mein anderes Interessengebiet. Ich habe weiterhin Erfahrungen mit Machine Learning, Deep Learning und künstlicher Intelligenz. Außerdem kann ich sehr gut mit Daten arbeiten. Tableau, R-Programmierung und SQL sind beispielsweise die Tools und die Software, mit denen ich die Daten abrufen, verarbeiten und analysieren kann.</p>
+										<p style="text-align: justify"><strong>Hi, ich bin Arash Heidari.</strong> Jetzt arbeite ich als Forscher am Elektronikforschungszentrum der Iranischen Universität für Wissenschaft und Technologie. Ich habe viele Erfahrungen mit eingebetteten Systemen und eingebetteter Software wie AVR-Mikrocontrollern, PIC-Mikrocontrollern, ARM usw. Ich habe auch einige Erfahrungen mit IoT und habe auch mit Raspberry PI und Arduino und den zugehörigen Modulen gearbeitet. Data Science ist mein anderes Interessengebiet. Ich habe weiterhin Erfahrungen mit Machine Learning, Deep Learning und künstlicher Intelligenz. Außerdem kann ich sehr gut mit Daten arbeiten. Tableau, R-Programmierung und SQL sind beispielsweise die Tools und die Software, mit denen ich die Daten abrufen, verarbeiten und analysieren kann.</p>
 
 										<p style="text-align: justify">Außerdem ist eines meiner Interessen das Programmieren. Daher kenne ich einige Programmiersprachen wie Python, JavaScript, C / C ++ usw. Ich habe eine Smartphone App mit ReactNative Library und einige Desktop-GUIs mit Python und QT entwickelt.</p>
 											
@@ -793,15 +793,15 @@ animation: odsoky 1s ease-in-out infinite  alternate;
 						</div>
 					</div>
 					<div class="footer-social">
-						<a href="mailto://arashheidary94@outlook.com" class="fa fa-envelope"></a>
+						<a href="mailto://arashheidari94@outlook.com" class="fa fa-envelope"></a>
 						<a href="tel://+989120620574" class="fa fa-phone"></a>
-						<a href="https://www.linkedin.com/in/arashheidary/" target="_blank" class="fa fa-linkedin"></a>
-						<a href="https://twitter.com/arashheidary94" target="_blank" class="fa fa-twitter"></a>
+						<a href="https://www.linkedin.com/in/arashheidari/" target="_blank" class="fa fa-linkedin"></a>
+						<a href="https://twitter.com/arashheidari94" target="_blank" class="fa fa-twitter"></a>
 						<br>
 						<br>
 						<br>
 						<h5><strong>Lage: </strong>Teheran, Iran</h5>
-						<h5><strong>Email: </strong>arashheidary94@outlook.com</h5>
+						<h5><strong>Email: </strong>arashheidari94@outlook.com</h5>
 						<h5><strong>Telefone und Whatsapp: </strong>+98 912 0620574</h5>		
 					</div>
 			
