--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ animation: odsoky 1s ease-in-out infinite  alternate;
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Arash Heidary | Personal Website</title>
+	<title>Arash Heidari | Personal Website</title>
 	<link rel = "icon" href ="images/favicon.ico" type = "image/x-icon"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
@@ -202,7 +202,7 @@ animation: odsoky 1s ease-in-out infinite  alternate;
 				</div>
 				</br>
 				<div class="author-img" style="background-image: url(images/about.jpg);"></div>
-				<h1 id="colorlib-logo"><a href="#">Arash Heidary</a></h1>
+				<h1 id="colorlib-logo"><a href="#">Arash Heidari</a></h1>
 				<span class="position"><a href="#" class="name-color">Electronics and Machine Learning Enginner</a></span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
@@ -240,7 +240,7 @@ animation: odsoky 1s ease-in-out infinite  alternate;
 					   					<div class="desc">
 						   					<h1> Hi! <br>I'm <span class="name-color">Arash</span></h1>
 						   					
-												<p><a href="resume_ArashHeidary.pdf" target="_blank" class="btn btn-primary btn-learn">Download <span class="name-color">CV</span> <i class="icon-download4"></i></a></p>
+												<p><a href="resume_ArashHeidari.pdf" target="_blank" class="btn btn-primary btn-learn">Download <span class="name-color">CV</span> <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
@@ -274,7 +274,7 @@ animation: odsoky 1s ease-in-out infinite  alternate;
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p style="text-align: justify"><strong>Hi I'm Arash Heidary.</strong> I currently work as a researcher at the Electronics Research Center (ERC) at Iran University of Science and Technology (IUST). I have experience in Embedded Systems and Embedded Software Programming, like AVR microcontrollers, PIC microcontrollers, ARM etc. I have some experiences with IoT too and I've worked with Raspberry PI and Arduino and the related modules as well. Data Science is my other field of interest. I have some experience with Machine Learning, Deep Learning and Artificial Intelligence. Besides, I can work well with data. For example Tableau, R programming and SQL are the tools and software I can work with to mine, wrangle and analyze the data.</p>
+										<p style="text-align: justify"><strong>Hi I'm Arash Heidari.</strong> I currently work as a researcher at the Electronics Research Center (ERC) at Iran University of Science and Technology (IUST). I have experience in Embedded Systems and Embedded Software Programming, like AVR microcontrollers, PIC microcontrollers, ARM etc. I have some experiences with IoT too and I've worked with Raspberry PI and Arduino and the related modules as well. Data Science is my other field of interest. I have some experience with Machine Learning, Deep Learning and Artificial Intelligence. Besides, I can work well with data. For example Tableau, R programming and SQL are the tools and software I can work with to mine, wrangle and analyze the data.</p>
 
 										<p style="text-align: justify">Furthermore, one of my interests is programming. So I know some of the programming languages such as Python, JavaScript, C/C++, etc. I have developed some smartphone application using ReactNative Library and some Desktop GUIs with Python and QT.</p>
 											
@@ -784,15 +784,15 @@ animation: odsoky 1s ease-in-out infinite  alternate;
 						</div>
 					</div>
 					<div class="footer-social">
-						<a href="mailto://arashheidary94@outlook.com" class="fa fa-envelope"></a>
+						<a href="mailto://arashheidari94@outlook.com" class="fa fa-envelope"></a>
 						<a href="tel://+989120620574" class="fa fa-phone"></a>
-						<a href="https://www.linkedin.com/in/arashheidary/" target="_blank" class="fa fa-linkedin"></a>
-						<a href="https://twitter.com/arashheidary94" target="_blank" class="fa fa-twitter"></a>
+						<a href="https://www.linkedin.com/in/arashheidari/" target="_blank" class="fa fa-linkedin"></a>
+						<a href="https://twitter.com/arashheidari94" target="_blank" class="fa fa-twitter"></a>
 						<br>
 						<br>
 						<br>
 						<h5><strong>Location: </strong>Tehran, Iran</h5>
-						<h5><strong>Email: </strong>arashheidary94@outlook.com</h5>
+						<h5><strong>Email: </strong>arashheidari94@outlook.com</h5>
 						<h5><strong>Phone and Whatsapp: </strong>+98 912 0620574</h5>		
 					</div>
 			
