small changes in resume

--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@ animation: odsoky 1s ease-in-out infinite  alternate;
 					               <div class="timeline-label">
 					                  <h2><a href="#">Researcher</a> <span>(Jan 2019-Present)</span></h2>
 					                  <p><strong>Iran University of Science and Technology</strong></p>
-									  <p>Helping PhD and Master Students to complete their Mschine Learning and Electronics projects / thesis.
+									  <p>Helping PhD and Master Students to complete their Maschine Learning and Electronics projects / thesis.
 									  <br>Instructing electronics, programming and machine learning to students.</p>
 					               </div>
 					            </div>
