--- a/de.html
+++ b/de.html
@@ -206,7 +206,7 @@ animation: odsoky 1s ease-in-out infinite  alternate;
 				</br>
 				<div class="author-img" style="background-image: url(images/about.jpg);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Arash Heidari</a></h1>
-				<span class="position"><a href="#" class="name-color">Elektronik- und maschinelles Lerneningenieur</a></span>
+				<span class="position"><a href="#" class="name-color">Ingenieur für Elektronik und maschinelles Lernen</a></span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
@@ -257,10 +257,8 @@ animation: odsoky 1s ease-in-out infinite  alternate;
 					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
-						   					<h1>Elektronik- <br><span class="name-color">&</span><br>Maschinelles Lerneningenieur</h1>
-												
-												
-											</div>
+						   					<h1>Ingenieur für Elektronik <br><span class="name-color">&</span><br>maschinelles Lernen</h1>												
+										</div>
 					   				</div>
 					   			</div>
 					   		</div>
