--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@ animation: odsoky 1s ease-in-out infinite  alternate;
 							<div class="con-tooltip right"><h3 style="width:100%;">Machine Learning <img src="images/info.png" width="5%" height="5%"></img></h3>
 								<div class="tooltip ">
 									<p style="padding-top: 10px"><i>- Python / R</i></p>
-									<p><i>- Scikit-Learn / MLlib</i></p>
+									<p><i>- Scikit-Learn / Spark MLlib</i></p>
 									<p><i>- PyTorch / TensorFlow / Keras</i></p>
 								  </div></div>
 						<div class="progress">
@@ -472,12 +472,28 @@ animation: odsoky 1s ease-in-out infinite  alternate;
 									<div class="tooltip ">
 										<p style="padding-top: 10px"><i>- Python / Matlab</i></p>
 										<p><i>- OpenCV</i></p>
+										<p><i>- Deep Learning</i></p>
 									  </div></div>
 							<div class="progress">
-									<div class="progress-bar color-2" role="progressbar" aria-valuenow="60"
-									aria-valuemin="0" aria-valuemax="100" style="width:60%">
-									<span>60%</span>
+									<div class="progress-bar color-2" role="progressbar" aria-valuenow="70"
+									aria-valuemin="0" aria-valuemax="100" style="width:70%">
+									<span>70%</span>
 									</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+						<div class="progress-wrap">
+								<div class="con-tooltip right"><h3 style="width:100%;">Amazon Web Services <img src="images/info.png" width="5%" height="5%"></img></h3>
+									<div class="tooltip ">
+										<p style="padding-top: 10px"><i>- S3/ EC2/ IAM/ RDS</i></p>
+										<p style="padding-top: 10px"><i>- SageMaker/ Athena/ Glue/ Kinesis</i></p>
+									  </div></div>
+							<div class="progress">
+								 <div class="progress-bar color-2" role="progressbar" aria-valuenow="60"
+								  aria-valuemin="0" aria-valuemax="100" style="width:60%">
+								<span>60%</span>
+								  </div>
 							</div>
 						</div>
 					</div>
@@ -580,20 +596,6 @@ animation: odsoky 1s ease-in-out infinite  alternate;
 									  aria-valuemin="0" aria-valuemax="100" style="width:80%">
 									<span>80%</span>
 									  </div>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="progress-wrap">
-									<div class="con-tooltip right"><h3 style="width:100%;">AWS <img src="images/info.png" width="5%" height="5%"></img></h3>
-										<div class="tooltip ">
-											<p style="padding-top: 10px"><i>- S3 / EC2 / IAM</i></p>
-										  </div></div>
-								<div class="progress">
-								 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="60"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:60%">
-								    <span>60%</span>
-								  	</div>
 								</div>
 							</div>
 						</div>
