--- a/de.html
+++ b/de.html
@@ -201,7 +201,7 @@ animation: odsoky 1s ease-in-out infinite  alternate;
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
 				<div class="language-select">
-						<a href="index.html">EN </a> <span>|</span> <a href="#"> DE</a>
+						<a href="index.html">EN </a> <span>| DE</span>
 					</div>
 				</br>
 				<div class="author-img" style="background-image: url(images/about.jpg);"></div>
@@ -490,7 +490,8 @@ animation: odsoky 1s ease-in-out infinite  alternate;
 									<div class="con-tooltip right"><h3 style="width:100%;">Amazon Web Services <img src="images/info.png" width="5%" height="5%"></img></h3>
 										<div class="tooltip ">
 											<p style="padding-top: 10px"><i>- S3/ EC2/ IAM/ RDS</i></p>
-											<p style="padding-top: 10px"><i>- SageMaker/ Athena/ Glue/ Kinesis</i></p>
+											<p style="padding-top: 10px"><i>- SageMaker/ Athena/ Glue/ Kinesis/ QuickSight</i></p>
+											<p style="padding-top: 10px"><i>- Rekognition/ Lex/ Comprehend/ ...</i></p>
 										  </div></div>
 								<div class="progress">
 									 <div class="progress-bar color-2" role="progressbar" aria-valuenow="60"
@@ -794,7 +795,6 @@ animation: odsoky 1s ease-in-out infinite  alternate;
 						<a href="mailto://arashheidari94@outlook.com" class="fa fa-envelope"></a>
 						<a href="tel://+989120620574" class="fa fa-phone"></a>
 						<a href="https://www.linkedin.com/in/arashheidari/" target="_blank" class="fa fa-linkedin"></a>
-						<a href="https://twitter.com/arashheidari94" target="_blank" class="fa fa-twitter"></a>
 						<br>
 						<br>
 						<br>
