Making Resume Better

--- a/de.html
+++ b/de.html
@@ -519,6 +519,7 @@ animation: odsoky 1s ease-in-out infinite  alternate;
 												<p style="padding-top: 10px"><i>- PyQT / Tkinter</i></p>
 												<p><i>- Numpy / Pandas</i></p>
 												<p><i>- Matplotlib / Seaborn / Dash & Plotly</i></p>
+												<p><i>- Sphinx</i></p>
 											  </div></div>
 									<div class="progress">
 										 <div class="progress-bar color-3" role="progressbar" aria-valuenow="90"
@@ -669,7 +670,7 @@ animation: odsoky 1s ease-in-out infinite  alternate;
 														<li>Note: 18,27 von 20</li>
 														<li>Der beste Student in meinem Fach Jahrgang</li>
 														<li>Thema der Abschlussarbeit: DPA-resistente Kryptographie für IoT-Zwecke</li>
-														<li>Supervior: Dr. Sattar Mirzakuchaki</li>
+														<li>Betreuer: Dr Sattar Mirzakuchaki</li>
 													</ul>
 												
 									         </div>
@@ -690,7 +691,7 @@ animation: odsoky 1s ease-in-out infinite  alternate;
 													<li>September 2012 - September 2016</li>
 													<li>Note: 16.19 von 20</li>
 													<li>Thema der Diplomarbeit: Steuerung eines Überwachungssystems über das Internet</li>
-													<li>Supervior: Dr. Sattar Mirzakuchaki</li>
+													<li>Betreuer: Dr Sattar Mirzakuchaki</li>
 												</ul>
 											
 										 </div>
@@ -764,7 +765,7 @@ animation: odsoky 1s ease-in-out infinite  alternate;
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">Lehrer-Assistent</a> <span>(Sep 2015 – Feb 2016)</span></h2>
+					               	<h2><a href="#">LehrAssistent</a> <span>(Sep 2015 – Feb 2016)</span></h2>
 									   <p><strong>Iranische Universität für Wissenschaft und Technologie</strong></p>
 									   <p>Lehrassistent im Kurs Computerarchitektur</p>
 					               </div>
