--- a/index.html
+++ b/index.html
@@ -514,8 +514,7 @@ animation: odsoky 1s ease-in-out infinite  alternate;
 									<div class="con-tooltip right"><h3 style="width:100%;">Python <img src="images/info.png" width="5%" height="5%"></img></h3>
 										<div class="tooltip ">
 											<p style="padding-top: 10px"><i>- PyQT / Tkinter</i></p>
-											<p><i>- Numpy / Pandas</i></p>
-											<p><i>- Matplotlib / Seaborn / Dash & Plotly</i></p>
+											<p><i>- Numpy/ Pandas/ Matplotlib/ Seaborn/ Dash & Plotly</i></p>
 											<p><i>- Sphinx</i></p>
 										  </div></div>
 								<div class="progress">
