--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                   <div class="col-md-8 skill-information" id="skill-ml-information">
                     <div class="skill-information-inner">
                       <h4 class="text-center">Machine Learning</h4>
-                      <p class="text-left">I have inquired more than 3 years about Machine Learning and Deep Learning algorithms. R and Python are the languages I use to develop artificial intelligence projects.</p>
+                      <p class="text-justify">I have inquired more than 3 years about Machine Learning and Deep Learning algorithms. R and Python are the languages I use to develop artificial intelligence projects.</p>
                       <ul class="text-left">
                         <li>R / Python</li>
                         <li>Sci-Kit Learn / MLlib</li>
