--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                       <a class="btn btn-general" id="btn-skill-ml-web" role="button">Web Crawling</a>
                     </div>
                     <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-ml-tableau" role="button">Tableau</a>
+                      <a class="btn btn-general" id="btn-skill-ml-tableau" role="button">Data Analysis and Visualisation</a>
                     </div>
                     <div class="skill-button">
                       <a class="btn btn-general" id="btn-skill-ml-aws" role="button">Amazon Web Services</a>
@@ -600,35 +600,35 @@
       <div class="content-box-sm contact-holder">
         <div class="container">
           <div class="row contact-justifier">
-            <div class="col-md-5">
+            <div class="col-md-5 wow fadeInLeft">
               <div class="contact-container text-center">
                 <i class="fas fa-phone contact-icon"></i>
                 <h4>Phone Number</h4>
                 <a href="tel:+989120620574">+98 912 0620574</a>
               </div>
             </div>
-            <div class="col-md-5">
+            <div class="col-md-5 wow fadeInRight">
               <div class="contact-container text-center">
                 <i class="fas fa-envelope contact-icon"></i>
                 <h4>Email Address</h4>
                 <a href="mailto:arashheidari94@outlook.com">arashheidari94@outlook.com</a>
               </div>
             </div>
-            <div class="col-md-5">
+            <div class="col-md-5 wow fadeInLeft">
               <div class="contact-container text-center">
                 <i class="fab fa-linkedin-in contact-icon"></i>
                 <h4>LinkedIn Account</h4>
                 <a target="_blank" href="https://www.linkedin.com/in/arashheidari">linkedin.com/in/arashheidari</a>
               </div>
             </div>
-            <div class="col-md-5">
+            <div class="col-md-5 wow fadeInRight">
               <div class="contact-container text-center">
                 <i class="fab fa-skype contact-icon"></i>
                 <h4>Skype Account</h4>
                 <a href="skype:live:.cid.7942a27b51066d91?chat">arashheidari94</a>
               </div>
             </div>
-            <div class="col-md-5">
+            <div class="col-md-5 wow fadeInUp">
               <div class="contact-container text-center">
                 <i class="fas fa-map-marker-alt contact-icon"></i>
                 <h4>Current Location</h4>
