--- a/index.html
+++ b/index.html
@@ -257,10 +257,10 @@
                       <h4>Microcontrollers</h4>
                       <p class="text-justify">I have a solid understanding of hardware and functionality of Microcontrollers. Other than bare-metal C or C++ Programming, I have experience utilising other tolls such as FreeRTOS in ARM and ESP8266 Microcontrollers.</p>
                       <ul class="text-left">
-                        <li>ARM</li>
-                        <li>AVR / PIC / Arduino</li>
-                        <li>FreeRTOS</li>
-                        <li>C / C++ / Assembly</li>
+                        <li><em>ARM</em></li>
+                        <li><em>AVR / PIC / Arduino</em></li>
+                        <li><em>FreeRTOS</em></li>
+                        <li><em>C / C++ / Assembly</em></li>
                       </ul>
                     </div>
                   </div>
@@ -280,7 +280,7 @@
                       <a class="btn btn-general" id="btn-skill-ml-web" role="button">Web Crawling</a>
                     </div>
                     <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-ml-tableau" role="button">Data Analysis and Visualisation</a>
+                      <a class="btn btn-general" id="btn-skill-ml-tableau" role="button">Data Mining and Analysis</a>
                     </div>
                     <div class="skill-button">
                       <a class="btn btn-general" id="btn-skill-ml-aws" role="button">Amazon Web Services</a>
@@ -291,9 +291,9 @@
                       <h4 class="text-center">Machine Learning</h4>
                       <p class="text-justify">I have inquired more than 3 years about Machine Learning and Deep Learning algorithms. R and Python are the languages I use to develop artificial intelligence projects.</p>
                       <ul class="text-left">
-                        <li>R / Python</li>
-                        <li>Sci-Kit Learn / MLlib</li>
-                        <li>TensorFlow / PyTorch</li>
+                        <li><em>R / Python</em></li>
+                        <li><em>Sci-Kit Learn / MLlib</em></li>
+                        <li><em>TensorFlow / PyTorch</em></li>
                       </ul>
                     </div>
                   </div>
@@ -324,11 +324,11 @@
                       <h4 class="text-center">Programming Languages</h4>
                       <p class="text-justify">I know a lot of different Programming Languages for different purposes.</p>
                       <ul class="text-left">
-                        <li>Python</li>
-                        <li>C / C++ / Cuda C</li>
-                        <li>JavaScript</li>
-                        <li>R</li>
-                        <li>Matlab</li>
+                        <li><em>Python</em></li>
+                        <li><em>C / C++ / Cuda C</em></li>
+                        <li><em>JavaScript</em></li>
+                        <li><em>R</em></li>
+                        <li><em>Matlab</em></li>
                       </ul>
                     </div>
                   </div>
@@ -562,7 +562,7 @@
                 <h4>Iran University of Science and Technology</h4>
                 <h5>Tehran, Iran</h5>
                 <p><i>My main responsibility was to help students in this course to pass the final test, so I solved them many different problems. In the end, I developed a simple computer (presented in Morris Mano book) with Verilog HDL.<br>
-                  I think The teaching assistant is not a job, but it was defiantly an excellent experience.</i></p>
+                  I must admit that the teaching assistant is not a job, but it was defiantly an excellent experience.</i></p>
               </div>
             </div>
           </div>
