--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                 <p class="edu-font"><b>Iran University of Science and Technology</b></p>
                 <p class="edu-font"><i>September 2012 - September 2016</i></p>
                 <p>GPA: 16.19 out of 20</p>
-                <p>Thesis Topic: Controlling of a Monitoring System Using Internet</p>
+                <p>Thesis Topic: Controlling a Monitoring System with the help of Internet</p>
                 <p>Supervisor: Dr. Sattar Mirzakuchaki</p>
               </div>
             </div>
@@ -500,7 +500,7 @@
                 <h4>Iran University of Science and Technology</h4>
                 <h5>Tehran, Iran</h5>
                 <p><i>I worked as the head-researcher in Circuit Design Lab in Electronics Research Center (ERC).<br>
-                  My main responsibility was to help master's and PhD students in their projects, theses, and seminars. So I teach them python programming, machine learning, and support them with my knowledge and ideas.<br>
+                  My main responsibility was to help master's and PhD's students in their projects, theses, and seminars. So I teach them python programming, machine learning, and support them with my knowledge and ideas.<br>
                   Maintaining computers and equipment in the lab was my other responsibility.</i></p>
               </div>
             </div>
@@ -561,7 +561,7 @@
                 <h3>Teaching Assistant</h3>
                 <h4>Iran University of Science and Technology</h4>
                 <h5>Tehran, Iran</h5>
-                <p><i>My main responsibility was to help students in this course to pass the final test, so I solved them many different problems. In the end, I developed a simple computer (presented in Morris Mano book) with Verilog HDL.<br>
+                <p><i>My main responsibility was to help students in the computer architecture course to pass the final test, so I solved them many different problems. In the end, I developed a simple computer (presented in Morris Mano book) with Verilog HDL.<br>
                   I must admit that the teaching assistant is not a job, but it was defiantly an excellent experience.</i></p>
               </div>
             </div>
