final revision, first step of deutsch version

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                       <a class="btn btn-general" id="btn-skill-programming-web" role="button">Web Development</a>
                     </div>
                     <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-programming-db" role="button">Other</a>
+                      <a class="btn btn-general" id="btn-skill-programming-db" role="button">Data Base</a>
                     </div>
                   </div>
                   <div class="col-md-8 skill-information" id="skill-programming-information">
@@ -343,6 +343,9 @@
                   <div class="col-md-4 skill-holder">
                     <div class="skill-button skill-others-active-button">
                       <a class="btn btn-general" id="btn-skill-others-network" role="button">Network</a>
+                    </div>
+                    <div class="skill-button">
+                      <a class="btn btn-general" id="btn-skill-others-git" role="button">Git</a>
                     </div>
                     <div class="skill-button">
                       <a class="btn btn-general" id="btn-skill-others-comptia" role="button">CompTIA A+</a>
