second step of deutsch version

--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
                   </div>
                 </div>
                 <div id="about-right" class="wow fadeInRight" data-wow-duration="1s">
-                  <p><strong>Hi, I'm Arash.</strong> I currently work at the Electronics Research Center (ERC) at Iran University of Science and Technology (IUST) as a researcher. Programming of Embedded Systems is my main speciality. I have programmed many different Microcontrollers like ARM, PIC, and AVR. Additionally, I developed some IoT-based projects with Raspberry PI, Arduino, and related modules as well. Machine Learning is my other field of interest. I have inquired traditional Machine Learning algorithms and Deep Learning for more than 3 years and developed some projects using Deep Learning Frameworks.</p>
-                  <p>Furthermore, one of my interests is programming. I have an excellent command of some of the programming languages such as Python, JavaScript, C/C++, etc. My field of interest in the programming domain, other than embedded development, is GUI Design and Web Development. I developed some Desktop applications using PyQt, and two smartphone applications with React Native. I do not consider myself as a skilled web-developer, but I'm familiar with Frontend and Backend development.</p>
-									<p>I have a Master Degree in Digital Electronics Systems and graduated as the best student of the year in my field of study from Iran University of Science and Technology, where I have obtained my Bachelors as well.</p>
-									<p>I have many hobbies such as watching movies and series, reading books, etc., but learning new skills and gain knowledge about things I love to know about is the most valuable hobby I have. Besides the aforementioned skills, which I'll explain more in the Skills section, I love to read books about physics, genetics and history. Apart all of these, I am a good team-player, a fast learner, and an energetic person.</p>
+                  <p><strong>Hi, I'm Arash.</strong> I currently work at the Electronics Research Center (ERC) at Iran University of Science and Technology (IUST) as a researcher. Programming of Embedded Systems is my main speciality. I have programmed many different Microcontrollers like ARM, PIC, and AVR. Additionally, I developed some IoT-based projects with Raspberry PI, Arduino, and related modules as well. Machine Learning is my other field of interest. I have learned about traditional Machine Learning algorithms and Deep Learning for more than 3 years and developed some projects using Deep Learning Frameworks.</p>
+                  <p>Furthermore, one of my interests is programming. I have an excellent command of some of the programming languages such as Python, JavaScript, C/C++, etc. My field of interest in the programming domain, other than embedded development, is GUI Design and Web Development. I developed some Desktop applications using PyQt, and two smartphone applications with React Native. I do not consider myself a skilled web-developer, but I'm familiar with Frontend and Backend development.</p>
+									<p>I have a Master's Degree in Digital Electronics Systems and graduated as the best student of the year in my field of study from Iran University of Science and Technology, where I have obtained my Bachelor's as well.</p>
+									<p>I have many hobbies such as watching movies and series, reading books, etc., but learning new skills and gain knowledge about things I love to know about is the most valuable hobby I have. Besides the aforementioned skills, which I'll explain more in the Skills section, I love to read books about physics, genetics, and history. Apart from all of these, I am a good team-player, a fast learner, and an energetic person.</p>
                 </div>
               </div>
 
@@ -433,7 +433,7 @@
             <div class="col-md-6 text-center">
               <div class="education-container">
                 <i class="fas fa-book-reader education-icon"></i>
-                <h3>Bachelor Degree</h3>
+                <h3>Bachelor's Degree</h3>
                 <h4>Electronics</h4>
                 <p class="edu-font"><b>Iran University of Science and Technology</b></p>
                 <p class="edu-font"><i>September 2012 - September 2016</i></p>
@@ -445,7 +445,7 @@
             <div class="col-md-6 text-center">
               <div class="education-container">
                 <i class="fas fa-user-graduate education-icon"></i>
-                <h3>Master Degree</h3>
+                <h3>Master's Degree</h3>
                 <h4>Digital Electronics Systems</h4>
                 <p class="edu-font"><b>Iran University of Science and Technology</b></p>
                 <p class="edu-font"><i>September 2016 - July 2018</i></p>
@@ -607,7 +607,7 @@
               <div class="contact-container text-center">
                 <i class="fas fa-phone contact-icon"></i>
                 <h4>Phone Number</h4>
-                <a href="tel:+989120620574">+98 912 0620574</a>
+                <a href="tel:+989120620574">+98 912 0620 574</a>
               </div>
             </div>
             <div class="col-md-5 wow fadeInRight">
